SERVER-20856 Reset oplog subsystem during oplog creation.

This manual resetting allows creation of a replica set oplog while the
system is in the master mode of master/slave replication.